[package]
name = "moin-dm"
version = "0.1.0"
authors = ["Simeon Ricking <simeon.ricking@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.7.0"
users = "0.10.0"
crossterm = "0.17.7"
anyhow = "1.0"
freedesktop_entry_parser = "1.1.0"

[dependencies.cursive]
version = "0.15.0"
default-features = false
#features = ["termion-backend"]
features = ["crossterm-backend", "toml", "toml"]
