[package]
name = "moin-dm"
version = "0.1.0"
authors = ["Simeon Ricking <simeon.ricking@posteo.de>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "*"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dependencies.cursive]
version = "*"
default-features = false
#features = ["termion-backend"]
features = ["crossterm-backend", "toml", "toml"]
